// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPageContentBody is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPageContentBody testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiPageContentBody paddingSize l is rendered 1`] = `
<div
  class="ouiPageContentBody ouiPage--paddingLarge"
/>
`;

exports[`OuiPageContentBody paddingSize m is rendered 1`] = `
<div
  class="ouiPageContentBody ouiPage--paddingMedium"
/>
`;

exports[`OuiPageContentBody paddingSize none is rendered 1`] = `
<div
  class="ouiPageContentBody"
/>
`;

exports[`OuiPageContentBody paddingSize s is rendered 1`] = `
<div
  class="ouiPageContentBody ouiPage--paddingSmall"
/>
`;

exports[`OuiPageContentBody restrict width can be set to a custom number 1`] = `
<div
  class="ouiPageContentBody ouiPage--restrictWidth-custom"
  style="max-width:1024px"
/>
`;

exports[`OuiPageContentBody restrict width can be set to a custom value and does not override custom style 1`] = `
<div
  class="ouiPageContentBody ouiPage--restrictWidth-custom"
  style="color:red;max-width:24rem"
/>
`;

exports[`OuiPageContentBody restrict width can be set to a default 1`] = `
<div
  class="ouiPageContentBody ouiPage--restrictWidth-default"
/>
`;
